--- a/client/src/Components/OrderForm/OrderForm.css
+++ b/client/src/Components/OrderForm/OrderForm.css
@@ -83,8 +83,14 @@
 }
 
 .check-mark {
-    width: 350px;
-    height: auto;
+    width: 400px;
+}
+
+.check-mark-image {
+    object-fit: contain;
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
 }
 
 .successMessage {
@@ -92,8 +98,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 30px 30px 30px 0;
-    padding-left: 35px;
+    padding: 30px 30px 30px 35px;
     color: #fac564;
 }
 
@@ -112,7 +117,7 @@
     border: none;
     font-size: 18px;
     font-weight: bolder;
-    height: 55px;
+    min-height: 55px;
     border-radius: 2px;
     transition: 0.5s;
     margin-bottom: 20px;
@@ -122,4 +127,22 @@
 .back-to-menu-button:hover {
     background-color: #6e5218;
     transition: 0.7s;
+}
+
+@media (max-width:900px) {
+    .popup-content {
+        width: 80%;
+    }
+}
+
+@media (max-width:640px) {
+    .check-mark {
+        display: none;
+    }
+}
+
+@media (max-width:480px) {
+    .successMessage {
+        padding: 10px;
+    }
 }
